# coding-with-beat

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_CN.md  README_CODEX.md  README_EN.md  README_JP.md  bootstrap.sh  bootstrap_codex.sh  install.sh  install_codex.sh  pyproject.toml  uninstall.sh  uninstall_codex.sh
cc_jukebox/: __init__.py  __main__.py  config.py  dj.py  juke_agent.py  karaoke.py  lyrics_snapshot.py  mcp_client.py  relay.py  server.py  state.py  statusline.py  vibe.py  watch.py
coding_with_beat/: __init__.py  __main__.py  _tui.py  app.py  app_paths.py  app_settings.py  codex_vibe.py  companion.py  config.py  cwb_agent.py  dj.py  focus.py  history.py  karaoke.py  lyrics_snapshot.py  mcp_client.py  profile.py  server.py  service_manager.py  state.py  statusline.py  utils.py  vibe.py  watch.py
coding_with_beat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
commands/: cwb-chinese.md  cwb-classical.md  cwb-focus.md  cwb-hype.md  cwb-jazz.md  cwb-lofi.md  cwb-party.md  cwb-relax.md  cwb-sad.md  cwb-sleep.md  cwb-synthwave.md  cwb.md  juke.md
docs/: cases.md  index.html
scripts/: build_macos_app.py  generate_codebeat_buddy_pet.py  install_codex_config.py  install_settings.py  test_watch_states.py
tests/: test_app_paths.py  test_app_settings.py  test_apple_music.py  test_cli.py  test_codebeat_app.py  test_codebeat_app_builder.py  test_companion.py  test_companion_check.py  test_cwb_agent.py  test_history.py  test_install_settings.py  test_juke_agent.py  test_mcp_client.py  (+27 more)
(+101 files in other folders)
