[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-with-beat"
version = "0.1.0"
description = "A pixel-art music companion for Claude Code."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "Pillow>=10.0",
    "rich>=13.0",
    "mutagen>=1.47",
    "httpx[socks]>=0.27",
]

[project.scripts]
cwb = "coding_with_beat.__main__:main"

[tool.setuptools.packages.find]
include = ["coding_with_beat*"]
